log
Fri 19 Aug 2022 12:46:40 PM UTC: 
 tests:  0|6
total_score: 0/70
cb16566
Fri 19 Aug 2022 01:11:03 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:53:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:52:6: note: declared here
   52 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:54:19: error: implicit declaration of function ‘crearNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   54 |   Node *newNode = crearNode(data);
      |                   ^~~~~~~~~
      |                   createNode
list.c:54:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:54:9: error: unused variable ‘newNode’ [-Werror=unused-variable]
   54 |   Node *newNode = crearNode(data);
      |         ^~~~~~~
list.c: In function ‘prevList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
04a65c9
Fri 19 Aug 2022 01:17:42 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:53:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:52:6: note: declared here
   52 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:54:19: error: implicit declaration of function ‘crearNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   54 |   Node *newNode = crearNode(data);
      |                   ^~~~~~~~~
      |                   createNode
list.c:54:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:59:18: error: ‘Node’ has no member named ‘newNode’
   59 |     list -> tail -> newNode;
      |                  ^~
list.c:60:5: error: ‘r’ undeclared (first use in this function)
   60 |     r
      |     ^
list.c:60:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:60:6: error: expected ‘;’ before ‘}’ token
   60 |     r
      |      ^
      |      ;
   61 |     }
      |     ~ 
list.c: At top level:
list.c:64:1: error: expected identifier or ‘(’ before ‘}’ token
   64 | }
      | ^
list.c: In function ‘pushCurrent’:
list.c:72:3: error: unknown type name ‘node’; did you mean ‘Node’?
   72 |   node *current = list -> current;
      |   ^~~~
      |   Node
list.c:72:19: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   72 |   node *current = list -> current;
      |                   ^~~~
list.c:73:11: error: request for member ‘prev’ in something not a structure or union
   73 |   current -> prev -> next = list -> current -> next;
      |           ^~
list.c:74:11: error: request for member ‘next’ in something not a structure or union
   74 |   current -> next -> prev = list -> current -> prev;
      |           ^~
list.c: In function ‘prevList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dc97281
